--- a/src/ReactiveWebSocket/ReactiveWebSocket.csproj
+++ b/src/ReactiveWebSocket/ReactiveWebSocket.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <Authors>Peter Wretmo</Authors>
+    <Company>Peter Wretmo</Company>
+    <PackageProjectUrl>https://github.com/pwretmo/ReactiveWebSocket</PackageProjectUrl>
   </PropertyGroup>
 
 
