--- a/src/ReactiveWebSocket/ReactiveWebSocket.csproj
+++ b/src/ReactiveWebSocket/ReactiveWebSocket.csproj
@@ -4,8 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <Authors>Peter Wretmo</Authors>
-    <Company>Peter Wretmo</Company>
-    <PackageProjectUrl>https://github.com/pwretmo/ReactiveWebSocket</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/pwretmo/ReactiveWebSocket</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
